[package]

name = "jqsh"
version = "0.0.1"
authors = [
    "madmalik <matthias.tellen@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]

[[bin]]
name = "jqsh"
path = "cli/main.rs"
doc = false
test = false
bench = false

[lib]
name = "jqsh"
path = "src/lib.rs"

[dependencies.readline]
git = "https://github.com/gwenn/rust-readline.git"
