[package]
name = "jqsh"
version = "0.0.1"
authors = [
    "madmalik <matthias.tellen@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]

[[bin]]
name = "jqsh"
path = "cli/main.rs"
doc = false
test = false
bench = false

[lib]
name = "jqsh"
path = "src/lib.rs"

[dependencies]
itertools = "*"
num = "*"

[dependencies.linked-hash-map]
git = "https://github.com/contain-rs/linked-hash-map.git" # crates.io version is outdated

[dependencies.literator]
git = "https://github.com/kmcallister/literator.git"

[dependencies.readline]
git = "https://github.com/gwenn/rust-readline.git"

[dependencies.unicode]
git = "https://github.com/fenhl/rust-unicode.git"
